found that profile picture became an oval when viewed horizontally on mobile, trying to fix this

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ a:link {
 }
 
 .image-cropper {
+    width: 30vw; /* or another responsive unit */
+    height: 30vw; /* Same as width */
     width: 400px;
     height: 400px;
     position: relative;
